[TUTORIAL] adapted KNIME tutorial to 1.12

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -187,13 +187,11 @@
 
 \include{labelfree}
 
-\include{qc}
-
 \include{metabolomics}
 
 \include{openswath}
 
-\include{pyopenms}
+%\include{pyopenms}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\newpage
