--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -32,25 +32,25 @@ We will make use of these later throughout the tutorial. Let's start with a firs
       . This file contains a reduced LC-MS map (only a selected RT and m/z range
       was extracted using the TOPP tool FileFilter) of a label-free measurement of the human platelet proteome recorded on an Orbitrap velos.
       The other two mzML files contain technical replicates of this experiment.
+      First, we want to obtain a global view on the whole LC-MS map - the default option \textit{Map view 2D} is the correct one and we can click the ok button. 
 \item Play around.
-\item Three action modes are supported, one for scrolling, one for zooming and one for measuring:
+\item Three basic modes allow you to interact with the displayed data: scrolling, zooming and measuring:
     \begin{itemize}
     \item Scroll mode
         \begin{itemize}
-        \item It is activated by default, though each loaded spectra file is displayed zoomed out first, so you do not need to scroll.
+        \item Is activated by default (though each loaded spectra file is displayed zoomed out first, so you do not need to scroll).
+        \item Allows you to browse your data by moving around in RT and m/z range.
         \item When zommed in, to scroll the spectra map, click-drag on the current view.
         \item Arrow keys can be used to scroll the view as well.
         \end{itemize}
     \item Zoom mode
         \begin{itemize}
-        \item All previous zoom levels are stored in a zoom history. The zoom history can be traversed using
-              \keys[,]{\ctrl,+} or \keys[,]{\ctrl,-} or the mouse wheel (scroll up and down).
         \item Zooming into the data: either mark an area in the current view with your mouse while holding the left mouse
               button plus the \keys{\ctrl} key to zoom to this area
-              or use your mouse wheel to traverse the zoom history.
-        \item If you have reached the end of the history and keep on pressing \keys[,]{\ctrl,+} or
-        			scroll up, the current area will be enlarged by a factor of $1.25$
-        \item Pressing the Backspace key resets the zoom and zoom history.
+              or use your mouse wheel to zoom in and out.
+        \item All previous zoom levels are stored in a zoom history. The zoom history can be traversed using
+              \keys[,]{\ctrl,+} or \keys[,]{\ctrl,-} or the mouse wheel (scroll up and down).
+        \item Pressing the Backspace key zooms out to show the full LC-MS map (and also resets the zoom history).
         \end{itemize}
     \item Measure mode
         \begin{itemize}
@@ -84,37 +84,18 @@ process, in order to make it more difficult to create an invalid workflow.
 Throughout most of the parts of this tutorial you will use KNIME to create and
 execute workflows. This first step is to make yourself familiar with KNIME.
 
+% 
+% This description is based on KNIME 1.12.0
+%
+
 \subsubsection{Install OpenMS using KNIME}
 
-Before we can start with the tutorial we need to install all the required extension for KNIME.
-First we will install the OpenMS plugin, providing all the OpenMS nodes.
-Afterwards we will install some additional plugins that we will use in the more advanced part of this tutorial.
+Before we can start with the tutorial we need to install all the required extensions for KNIME.
 
+First, we install some additional extensions that are required by our OpenMS nodes or used in the Tutorials e.g. for visualization.
 \begin{enumerate}
-\item Open KNIME.
 \item Click on \menu{Help > Install New Software...}
-\item \label{it:add_site} In the now open dialog choose \menu{Add...} (in the upper right corner of the dialog) to define a new update site. In the opening dialog enter the following details. \\
-\textit{Name:} \texttt{Trunk Community Contributions} \\
-\textit{Location:} \texttt{http://tech.knime.org/update/community-contributions/trunk/}
-\item \label{it:select_site} After pressing \keys{OK} KNIME will show you all the contents of the added Update Site, containing also the OpenMS nodes.
-%\todo{First install File Handling Nodes?}
-\item Select the OpenMS nodes in the category "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
-\item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available under “Community Nodes”.
-\end{enumerate}
-
-\note{
-For this tutorial we use a pre-release version of OpenMS 1.12.
-While not being a full release, it was nevertheless intensively tested to ensure its functionality for this tutorial.
-For regular use we recommend using the latest stable OpenMS release.
-To install the latest stable release skip Steps \ref{it:add_site} and \ref{it:select_site} and instead choose the update site \menu{Trusted Community Contributions}.
-Please note that some of the workflows shown here require OpenMS 1.12 and therefore will not work with OpenMS 1.11.1 downloaded from the stable update site.
-}
-
-For the rest of the tutorial we will also need some more plugins, that can be installed similar to the OpenMS nodes.
-
-\begin{enumerate}
-\item Again, click on \menu{Help > Install New Software...}
-\item From the \menu{Work with:} drop down list select the \menu{KNIME Analytics Platform Update Site}
+\item From the \menu{Work with:} drop down list select the \menu{http://update.knime.org/analytics-platform/2.12}
 \item Now select the following plugins from the \textit{KNIME \& Extensions} category
     \begin{itemize}
     \item KNIME Base Chemistry Types \& Nodes
@@ -131,22 +112,57 @@ For the rest of the tutorial we will also need some more plugins, that can be in
     \begin{itemize}
     \item ChemAxon/Infocom Marvin Extensions Feature
     \end{itemize}
-\item Click \keys{Next} and follow the instructions.
+\item Follow the instructions and after a restart of KNIME the dependencies will be installed.
 \end{enumerate}
+
+You are now ready to install the OpenMS nodes.
+
+\begin{enumerate}
+\item Open KNIME.
+\item Click on \menu{Help > Install New Software...}
+  
+% Use this part if you base the tutorial on the nightly contributions (not recommended - more of a emergency measure)
+  %\item \label{it:add_site} In the now open dialog choose \menu{Add...} (in the upper right corner of the dialog) to define a new update site. In the opening dialog enter the following details. \\
+  %\textit{Name:} \texttt{Trunk Community Contributions} \\
+  %\textit{Location:} \texttt{http://tech.knime.org/update/community-contributions/trunk/}
+  %\item \label{it:select_site} After pressing \keys{OK} KNIME will show you all the contents of the added Update Site.
+
+% Use this part if you base the tutorial on the last stable release (recommended)
+  \item From the \menu{Work with:} drop down list select the \menu{http://tech.knime.org/update/community-contributions/trusted/2.12}
+\item Select the \textbf{OpenMS} nodes in the category "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
+\item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available under “Community Nodes”.
+\end{enumerate}
+
+% Use this part if you base the tutorial on a pre-release of OpenMS X.X.X
+ %\note{
+ %For this tutorial we use a pre-release version of OpenMS X.X.X
+ %While not being a full release, it was nevertheless intensively tested to ensure its functionality for this tutorial.
+ %For regular use we recommend using the latest stable OpenMS release.
+ %Please note that some of the workflows shown here require OpenMS X.X and therefore will not work with OpenMS Y.Y downloaded from the stable update site.
+ %}
 
 \subsubsection{KNIME Concepts}
 
-A \textbf{workflow} is a sequence of steps applied to a single or multiple input data sets to process and analyse this data.
+A \textbf{workflow} is a sequence of computational steps applied to a single or multiple input data sets to process and analyse the data.
 In KNIME such workflows are implemented graphically by combining so-called \textbf{nodes}.
-
 A node represents a single analysis step in a workflow.
-Nodes have input and output ports where the data goes into to the node or the results are provided for other nodes after processing, respectively.
+Nodes have input and output \textbf{ports} where the data enters the node or the results are provided for other nodes after processing, respectively.
 KNIME distinguishes between different port types, representing different types of data.
-The most common representation in KNIME are tables (similar to an excel sheet).
-Those ports are marked with a small triangle.
-For OpenMS we use a different port type, so called file ports, representing complete files.
+The most common representation of data in KNIME are tables (similar to an excel sheet).
+Ports that accept tables are marked with a small triangle.
+For OpenMS we use a different port type, so called \textbf{file ports}, representing complete files.
 Those ports are marked by a small grey box.
 Dark grey boxes represent mandatory inputs and light grey boxes optional inputs.
+
+A typical OpenMS workflow in KNIME can be divided in two conceptually different parts:
+\begin{itemize}
+\item
+Nodes for signal and data processing, filtering and data reduction. Here, files are passed between nodes. Execution times of the individual steps are longer as the main computational steps are performed. 
+\item
+Downstream statistical analysis and visualization. Here, tables are passed between nodes.
+\end{itemize}
+
+Between file based processing and table based analysis a conversion node typically performs the conversion from OpenMS results into KNIME tables.
 
 Nodes can have three different states, indicated by the small traffic light below the node.
 
@@ -292,7 +308,9 @@ You will find some basic information of the data contained in the mzML file, e.g
 \label{fig:knime_minimal}
 \end{figure}
 
-Now consider you would like to gather this information for more then one file.
+
+Workflows are typically constructed to process a large number of files automatically.
+As a simple example, consider you would like to gather this information for more than one file.
 We will now modify the workflow to compute the same information on three different files and then write the output files to a folder.
 
 \begin{itemize}
@@ -306,13 +324,23 @@ To select the files we double-click on the \KNIMENODE{Input Files} node and clic
 In the filesystem browser we select all three files from the directory \directory{OpenMS / tiny / }.
 And close the dialog with \menu{Ok}.
 \item
-We now add two more nodes: the \KNIMENODE{ZipLoopStart} and the \KNIMENODE{ZipLoopEnd} node from the category \menu{Community Nodes > GenericKnimeNodes > Flow}.
+We now add two more nodes: the \KNIMENODE{ZipLoopStart} and the \KNIMENODE{ZipLoopEnd} node from the category \menu{Community Nodes > GenericKnimeNodes > Flow}. 
 \item
 Afterwards we connect the \KNIMENODE{Input Files} node to the first port of the \KNIMENODE{ZipLoopStart} node, the first port of the \KNIMENODE{ZipLoopStart} node to the \KNIMENODE{FileInfo} node, the first output port of the \KNIMENODE{FileInfo} node to the first input port of the \KNIMENODE{ZipLoopEnd} node, and the first output port of the \KNIMENODE{ZipLoopEnd} node to the \KNIMENODE{Output Folder} node (, not \KNIMENODE{Output File}).
 The complete workflow is shown in \cref{fig:knime_minimal_loop}
 \item
 The workflow is already complete.
 Simply execute the workflow and inspect the output as before.
+\end{itemize}
+
+In case you had trouble to understand what ZipLoopStart and ZipLoopEnd do - here is a brief explanation:
+\begin{itemize}
+\item
+The  \KNIMENODE{Input Files} node passes a list of files to the \KNIMENODE{ZipLoopStart} node.
+\item
+The \KNIMENODE{ZipLoopStart} node takes the files as input, but passes the single files sequentially (that is: one after the other) to the next node. 
+\item
+The \KNIMENODE{ZipLoopEnd} collects the single files that arrive at its input port. After all files have been processed, the collected files are passed again as file list to the next node that follows.
 \end{itemize}
 
 \begin{figure}
