[TUTORIAL] extended LFQ tutorial

--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -350,3 +350,25 @@
 	Publisher = {Springer},
 	Title = {{KNIME}: The {K}onstanz {I}nformation {M}iner},
 	Year = {2007}}
+
+@article{Chawade:2015,
+author = {Chawade, Aakash and Sandin, Marianne and Teleman, Johan and Malmström, Johan and Levander, Fredrik},
+title = {Data Processing Has Major Impact on the Outcome of Quantitative Label-Free LC-MS Analysis},
+journal = {Journal of Proteome Research},
+volume = {14},
+number = {2},
+pages = {676-687},
+year = {2015},
+doi = {10.1021/pr500665j},
+    note ={PMID: 25407311},
+
+URL = { 
+        http://dx.doi.org/10.1021/pr500665j
+    
+},
+eprint = { 
+        http://dx.doi.org/10.1021/pr500665j
+    
+}
+
+}
