added revised qc tutorial and workflow, removed remnants of the old qc

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -191,6 +191,8 @@
 
 \include{openswath}
 
+\include{qualitycontrol}
+
 %\include{pyopenms}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
