--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -4,7 +4,7 @@
 \section{Metabolomics}
 
 \subsection{Introduction}
-Quantitation and identification of chemical compounds are basic tasks in metabolomic studies. In this tutorial session we construct a UPLC-MS based, label-free quantitation and identification workflow. Following quantitation and identification we then perform statistical downstream analysis to detect quantitation values that differ significantly between two conditions. This approach can, for example, be used to detect biomarkers. Here, we use two spike-in conditions of a dilution series (0.5 mg/l and 10.0 mg/l, male blood background, measured in triplicates) comprising seven isotopically labeled compounds. Goal of this tutorial is to detect and quantify these differential spike-in compounds against the complex background.
+Quantitation and identification of chemical compounds are basic tasks in metabolomic studies. In this tutorial session we construct a UPLC-MS based, label-free quantitation and identification workflow. Following quantitation and identification we then perform statistical downstream analysis to detect quantitation values that differ significantly between two conditions. This approach can, for example, be used to detect biomarkers. Here, we use two spike-in conditions of a dilution series (0.5 mg/l and 10.0 mg/l, male blood background, measured in triplicates) comprising seven isotopically labeled compounds. The goal of this tutorial is to detect and quantify these differential spike-in compounds against the complex background.
 
 %\begin{figure}[htbp]
 %  \centering
@@ -115,7 +115,7 @@ This file specifies the list of adducts that are considered in the positive mode
 This file specifies the list of adducts that are considered in the negative mode analogous to the positive mode.
 \item
 \directory{Metabolomics / databases / HMDBMappingFile.tsv}\\
-This file contains information from a metabolite database in this case from HMDB. It has three tab-separated columns mass, formula, and identifier. This allows for an efficient search by mass.
+This file contains information from a metabolite database in this case from HMDB. It has three (or more) tab-separated columns: mass, formula, and identifier(s). This allows for an efficient search by mass.
 \item
 \directory{Metabolomics / databases / HMDB2StructMapping.tsv}\\
 This file contains additional information about the identifiers in the mapping file. It has four tab-separated columns that contain the identifier, name, SMILES, and INCHI. These will be included in the result file. The identifiers in this file must match the identifiers in the HMDBMappingFile.tsv.
@@ -140,7 +140,7 @@ The complete workflow from this section is shown in \cref{fig:metabo_part2}.
 \subsection{Convert your data into a KNIME table}
 
 The result from the \KNIMENODE{TextExporter} node as well as the result from the \KNIMENODE{AccurateMassSearch} node are files while standard KNIME nodes display and processes only KNIME tables. To convert these files into KNIME tables we need two different nodes.
-For the \KNIMENODE{AccurateMassSearch} results we use the \KNIMENODE{SmallMoleculeMzTabReader} node (\menu{Community Nodes > OpenMS > Conversion > mzTab}), for the result of the \KNIMENODE{TextExporter} we use the \KNIMENODE{ConsensusTextReader} (\menu{Community Nodes > OpenMS > Conversion}).
+For the \KNIMENODE{AccurateMassSearch} results we use the \KNIMENODE{MzTabReader} node (\menu{Community Nodes > OpenMS > Conversion > mzTab}), for the result of the \KNIMENODE{TextExporter} we use the \KNIMENODE{ConsensusTextReader} (\menu{Community Nodes > OpenMS > Conversion}).
 
 When executed, both nodes will import the OpenMS files and provide access to the data as KNIME tables.
 You can now easily combine both tables using the \KNIMENODE{Joiner} node (\menu{Data Manipulation > Column > Split \& Combine}) and configuring it to match the m/z and retention time values of the respective tables.
@@ -148,23 +148,24 @@ The full workflow is shown in \cref{fig:metabo_part3}.
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{graphics/metabo/metabo_part3}
+  \includegraphics[width=0.85\textwidth]{graphics/metabo/metabo_part3_2015}
   \caption{Label-free quantification and identification workflow for metabolites that loads the results into KNIME and joins the tables.}
   \label{fig:metabo_part3}
 \end{figure}
 
-\subsubsection{Bonus task: Visualising data}
+\subsubsection{Bonus task: Visualizing data}
 
 Now that you have your data in KNIME you should try to get a feeling for the capabilities of KNIME.
 
 \begin{task}
-Check out the \KNIMENODE{Molecule Type Cast} node to render the structural formula contained in the result table.
+Check out the \KNIMENODE{Molecule Type Cast}  node (\menu{Chemistry > Translators}) together with subsequent cheminformatics nodes (e.g. \KNIMENODE{RDKit From Molecule} (\menu{Community Nodes > RDKit > Converters})) to render the structural formula contained in the result table.
+
 \end{task}
 \begin{task}
 Have a look at the \KNIMENODE{Column Filter} node to reduce the table to the interesting columns, e.g., only the Ids, chemical formula, and intensities.
 \end{task}
 \begin{task}
-Try to compute and visualise the m/z and retention time error of the different elements of the consensus features.
+Try to compute and visualize the m/z and retention time error of the different elements of the consensus features.
 \end{task}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -206,6 +207,29 @@ After we linked features across all maps, we want to identify features that are 
 
 \end{itemize}
 
+
+\subsubsection{Interactive Visualization}
+
+KNIME supports multiple nodes for interactive visualization with interrelated output. The nodes used in this part of the workflow exemplify this concept. They further demonstrate how 
+figures with data dependent customization can be easily realized using basic KNIME nodes. Several simple operations are concatenated in order to enable an interactive volcano plot.
+\begin{itemize}
+\item We first log-transform fold changes and p-values in the \KNIMENODE{R Snippet} node. We then append columns noting interesting features (concerning fold change and p-value).
+\item With this information, we can use various Manager nodes (\menu{Data Views > Property}) to emphasize interesting data points. The configuration dialogs allows us to select columns to change color, shape or size of data points dependent on the column values.
+\item The \KNIMENODE{Scatter Plot} node (\menu{Data Views}) enables interactive visualization of the logarithmized values as a volcano plot: Data points can be selected in the plot and HiLited via the menu option. HiLiteing transfers to all other interactive nodes connected to the same data table. In our case, selection and HiLiteing will also occur in the \KNIMENODE{Interactive Table} node (\menu{Data Views}).
+\item Output of the interactive table can then be filtered via the HiLite menu tab. For example, we could restrict shown rows to points HiLited in the volcano plot.
+\end{itemize}
+\begin{task}
+Inspect the nodes of this section. Customize your visualization and possibly try to visualize other aspects of your data.
+\end{task}
+
+\subsubsection{Advanced Visualization}
+Even though the basic capabilities for (interactive) plots in KNIME are valuable for initial data exploration, professional looking depiction of analysis results often relies on dedicated plotting libraries. The statistics language R supports the addition of a large variety of packages, including packages providing extensive plotting capabilities. This part of the workflow shows how to use R nodes in KNIME to visualize more advanced figures. Specifically, we make use of different plotting packages to realize heatmaps and a PCA plot.
+\begin{itemize}
+\item The used \KNIMENODE{RView (Table)} nodes combine the possibility to write R snippet code with visualization capabilities inside KNIME. Resulting images can be looked at in the output RView, or saved via the \KNIMENODE{Image Port Writer} node.
+\item The heatmap nodes make use of the gplots libary, which is by default part of the R Windows binaries for the KNIME 2.12 full installation. We again use regular expressions to extract all measured intensity columns for plotting. For clarity, feature names are only shown in the heatmap after filtering by fold changes.
+\item The remaining node performs principal component analysis and plots the first two principal components. Data points are colored by group membership to treated or control samples. The R commands to install the necessary plotting package are part of the node snippet. Removal of the comment character `\#' and snippet execution allows for package installation from inside KNIME.
+\end{itemize}
+
 \subsubsection{Data preparation for Reporting}
 Following the identification, quantification and statistical analysis our data is merged and formatted for reporting.
 First we want to discard our normalized and logarithmized intensity values in favor of the original ones.
@@ -215,7 +239,7 @@ Combining ID and Quantification table into a single table is again achieved usin
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.7\textwidth]{graphics/metabo/reporting.png}
+  \includegraphics[width=0.7\textwidth]{graphics/metabo/reporting_2015.png}
   \caption{Data preparation for reporting}
   \label{fig:consensusid}
 \end{figure}
@@ -225,7 +249,7 @@ What happens if we use an \textit{Left Outer Join}, \textit{Right Outer Join} or
 \end{question}
 
 \begin{task}
-Inspect the output of the join operation and after the Molecule Type Cast.
+Inspect the output of the join operation after the Molecule Type Cast and RDKit molecular structure generation.
 \end{task}
 
 While all relevant information is now contained in our table the presentation could be improved.
@@ -233,4 +257,6 @@ Currently, we have several rows corresponding to a single consensus feature (=li
 It would be more convenient to have only one row for each consensus feature with all accurate mass identifications added as additional columns.
 To achieve we use the \KNIMENODE{Column to Grid} node that flattens several rows with the same consensus number into a single one.
 Note that we have to specify the maximum number of columns in the grid so we set this to a large value (e.g. 100).
-We finally select only the columns we are interested in with the last \KNIMENODE{Column Filter} and export the data to an Excel file (\KNIMENODE{XLS Writer}).
+We finally export the data to an Excel file (\KNIMENODE{XLS Writer}).
+
+
