Added TOPPView image

--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -21,6 +21,12 @@ All files used in this tutorial have already been converted to mzML by us, so yo
 Visualizing the data is the first step in quality control, an essential tool in understanding the data, and of course an essential step in pipeline development.
 OpenMS provides a convenient viewer for some of the data: \OPENMSTOOL{TOPPView}.
 
+\begin{figure}
+\includegraphics[width=\textwidth]{graphics/introduction/TOPPView.png}
+\caption{TOPPView}
+\label{fig:toppview}
+\end{figure}
+
 We will guide you through some of the basic features of \OPENMSTOOL{TOPPView}. Please familiarize yourself with the key controls and visualization methods.
 We will make use of these later throughout the tutorial. Let's start with a first look at one of the files of our tutorial data set:
 
